<resources>
    <string name="app_name">ShopE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muhammad Sami</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="lorem_ipsum_text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="add_to_cart"><u>Add to Cart</u></string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">First Name *</string>
    <string name="name1">First Name</string>
    <string name="jawad">Jawad</string>
    <string name="last_name">Last Name *</string>
    <string name="aslam">Aslam</string>
    <string name="email">Email *</string>
    <string name="email1">Email</string>
    <string name="jawad_autofit_com">Jawad@AutoFit.com</string>
    <string name="phone">Phone *</string>
    <string name="phone1">Phone</string>
    <string name="_091348388">091348388</string>
    <string name="address">Address *</string>
    <string name="address1">Address</string>
    <string name="house_611_abc_road_lahore">House 611, abc Road, Lahore</string>
    <string name="password">Password *</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="heard_about_us_from">Heard about us from</string>
    <string name="reference_name">Reference Name</string>
    <string name="ali">Ali</string>
    <string name="is_vendore">Is Vendore</string>
    <string name="you_can_get_password_link_through_email">You can get password link through email.</string>
    <string name="brand_name">TOYOTA</string>
    <string name="break_gear">Break Gear</string>
    <string name="toyota_engine_parts">Toyota Engine Parts</string>
    <string name="full_name">Last Name *</string>
    <string name="full_name1">Last Name</string>
    <string name="order_id">Order ID</string>
    <string name="_127890">127890</string>
    <string name="date">Date</string>
    <string name="_10_october_2022">10, October, 2022</string>
    <string name="status">Status</string>
    <string name="inprogress">Inprogress</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="note">Note</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="sub_total">Sub Total</string>
    <string name="_2400_00">00.00</string>
    <string name="discount">Discount</string>
    <string name="_200_00">00.00</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="_300_00">00.00</string>
    <string name="total">Total</string>
    <string name="_2500_00">00.00</string>
    <string name="_800">800</string>
    <string name="_2x">2x</string>
    <string name="rs">RS,</string>
    <string name="today">Today</string>
    <string name="total_items_03">Total items 03</string>
    <string name="send">Send</string>
    <string name="forget_your_password">Forget Your Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">\tSignup</string>
    <string name="honda">Honda</string>
    <string name="mobile">Mobile</string>
    <string name="_0300_8756028">0300 8756028</string>
    <string name="_0423_8756028">0423 8756028</string>
    <string name="contact_us_image">contact us image</string>
    <string name="my_orders">My Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="products">Products</string>
    <string name="brands">Brands</string>
    <string name="promotions">Promotions</string>
    <string name="ads_home">Ads - Home</string>
    <string name="add_to_wishlist"><u>Add to wishlist</u></string>
    <string name="forget_your_password1">Forget Your Password ?</string>
    <string name="keep_calm_enter">Keep Calm, Enter the email address associated with your account</string>
    <string name="check_out">Check Out</string>
    <string name="Account_is_missing">Account is missing</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty.</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="clear_all">Clear All</string>
    <string name="want_to_receive_push_status">Want to receive push notification when\norder status changes</string>
    <string name="want_to_receive_push_new_promotions">Want to receive push notification for\nnew promotions</string>
    <string name="want_to_receive_push_new_products">Want to receive push notification for\nnew products</string>


    <string-array name="vendor_array">
        <item><font fgcolor="#D8D3D3">Select Vendor</font></item>
        <item>Friends</item>
        <item>Facebook</item>
        <item>Website</item>
        <item>Twitter</item>
    </string-array>
</resources>