<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


<!--    we use group tag with a unique id for
every single item, for separator-->

    <group
        android:id="@+id/group_item_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/adsHomeFragment"
            android:icon="@drawable/ads_home"
            android:title="@string/ads_home"
            />
    </group>


    <group
        android:id="@+id/group_item_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/promotionsFragment"
            android:icon="@drawable/promotions"
            android:title="@string/promotions" />
    </group>

    <group
        android:id="@+id/group_item_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/brandsFragment"
            android:icon="@drawable/brands"
            android:title="@string/brands" />
    </group>

    <group
        android:id="@+id/group_item_4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/productsFragment"
            android:icon="@drawable/products"
            android:title="@string/products" />
    </group>

    <group
        android:id="@+id/group_item_5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contactUsFragment"
            android:icon="@drawable/contact_us"
            android:title="@string/contact_us" />
    </group>


<!--    android:id="@+id/rateUsFragment"-->
    <group
        android:id="@+id/group_item_6"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/rate_us"
            android:title="@string/rate_us" />
    </group>


    <group
        android:id="@+id/group_item_7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>


    <group
        android:id="@+id/group_item_8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/signInFragment"
            android:icon="@drawable/sign_out"
            android:title="@string/sign_out"/>
    </group>

    <group
        android:id="@+id/sub_menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/orderListingFragment"
            android:title="@string/my_orders"
            android:icon="@color/transparent"
            />

        <item
            android:id="@+id/wishListFragment"
            android:title="@string/wishlist"
            android:icon="@color/transparent"
            />

        <item
            android:id="@+id/profileFragment"
            android:title="@string/profile"
            android:icon="@color/transparent"
            />
    </group>

</menu>