<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".view.fragments.forgotPassword.ForgotPasswordFragment">

    <TextView
        android:id="@+id/fragment_forgot_password_back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/red"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/Account_is_missing" />

    <TextView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:maxLines="2"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/open_sans_regular"
        android:layout_gravity="center"
        android:text="@string/keep_calm_enter"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="@color/red"
        android:text="@string/email" />

    <EditText
        android:id="@+id/fragment_forgot_password_email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/jawad_autofit_com" />

    <FrameLayout
        android:id="@+id/fragment_forgot_password_send_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/red">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/open_sans_regular"
            android:layout_gravity="center"
            android:text="@string/login"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/myriad_pro_regular"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/smoky_gray"
        android:text="@string/you_can_get_password_link_through_email"/>


</LinearLayout>