<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.order.orderDetails.OrderDetailsFragment">

    <include
        layout="@layout/promotions_banner"
        android:id="@+id/fragment_order_details_id"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id"
                    android:fontFamily="@font/open_sans_regular"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/red"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_127890"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_18sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_october_2022"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:fontFamily="@font/open_sans_regular"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_18sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inprogress"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:textSize="@dimen/_14sdp"
                    android:gravity="end"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:textSize="@dimen/_18sdp"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/myriad_pro_regular"
                android:textColor="@color/black"
                android:text="@string/lorem_ipsum_text2"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_order_details_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_10sdp"
                tools:listitem="@layout/order_summary_list_items_view"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="@dimen/_18sdp"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_text2"
                android:textColor="@color/black"
                android:fontFamily="@font/myriad_pro_regular"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/red"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/payment_summary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/sub_total"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/_2400_00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/discount"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/_200_00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/delivery_fee"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/smoky_gray"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/_300_00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/red"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/total"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/red"
                    android:fontFamily="@font/open_sans_regular"
                    android:textSize="@dimen/_18sdp"
                    android:text="@string/_2500_00"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>