<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.filter.FilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:background="@color/red">

        <TextView
            android:id="@+id/fragment_filter_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_weight="@integer/material_motion_duration_short_1"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/fragment_filter_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/fragment_filter_clear_all_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/red"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="end"
        android:padding="@dimen/_15sdp"/>



    <ExpandableListView
        android:id="@+id/fragment_filter_expendable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:groupIndicator="@drawable/custom_expandable"
        />

</LinearLayout>